--- a/_config.yml
+++ b/_config.yml
@@ -24,10 +24,11 @@ repo: "https://github.com/A-Journey-through-Deep-Learning/A-journey-through-Deep
 # site urls
 # add the url for the domain,
 # on gh-pages follow the pattern: https://username.github.io 
+
 url: https://A-journey-through-Deep-Learning.github.io
 # add subsection of the domain,
 # on gh-pages this is a / followed by the name of the repository
-baseurl: /
+baseurl: "/A-journey-through-Deep-Learning-2025"
 
 # add google analytics if desired (optional)
 # if blank, it will be ignored
