--- a/_config.yml
+++ b/_config.yml
@@ -28,7 +28,7 @@ repo: "https://github.com/A-Journey-through-Deep-Learning/2025"
 url: https://A-journey-through-Deep-Learning.github.io/2025
 # add subsection of the domain,
 # on gh-pages this is a / followed by the name of the repository
-baseurl: "/2025"
+baseurl: /2025
 
 
 # add google analytics if desired (optional)
